ИСПРАВИЛА ОШИБКИ ВАЛИДАЦИИ

--- a/index.html
+++ b/index.html
@@ -91,37 +91,38 @@
         <li> 
         <figure>
             <img src="./masters/john.jpg" alt="первый мастер" width="370"> 
-            <figcaption>John Smith </br> <span>Extreme Barber</span></figcaption>
-            <ul>
+            <figcaption>John Smith </br> <span>Extreme Barber</span></figcaption>   
+        </figure>
+        <ul>
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">LinkedIn</a></li>
             </ul>
-        </figure>
         </li>
         <li>
             <figure>
             <img src="./masters/michelle.jpg" alt="второй мастер" width="370">
             <figcaption>Michele Doe </br> <span>Extreme Barber</span></figcaption>
-            <ul>
+        </figure> 
+        <ul>
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">LinkedIn</a></li>
             </ul>
-        </figure>
     </li>
-        <li><figure>
+        <li>
+            <figure>
             <img src="./masters/alan.jpg" alt="третий мастер" width="370">
             <figcaption>Alan Black </br> <span>Extreme Barber</span></figcaption>
+        </figure>  
             <ul>
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">LinkedIn</a></li>
             </ul>
-        </figure>
     </li>
     </ul>
 </section>
@@ -139,9 +140,9 @@
 
 <footer>
     <section> <h2>Онлайн-запись</h2> 
-        <textarea name="name" id="" cols="30" rows="1" placeholder= "Имя*"></textarea>
-        <textarea name="number" id="" cols="30" rows="1" placeholder="Телефон*"></textarea>
-        <textarea name="massege" id="" cols="30" rows="5" placeholder="Сообщение"></textarea>
+        <textarea name="name" cols="30" rows="1" placeholder= "Имя*"></textarea>
+        <textarea name="number" cols="30" rows="1" placeholder="Телефон*"></textarea>
+        <textarea name="massege" cols="30" rows="5" placeholder="Сообщение"></textarea>
         <button>Отправить</button>
     </section>
     
